# CMake_Intro

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
adder_lib/: CMakeLists.txt  adder.c
include/: header.h
src/: another_src_file.c  foo.c  main.c
